# monstera

./: .gitignore  README.md  pyproject.toml  requirements.md
monstera/: helper.py
monstera/cli/: main.py
monstera/core/: categories.py  db.py  expenses.py  gid.py  schema.py
monstera/db/: __init__.py  db.py  schema.py
monstera/testing/: conftest.py  test_categories.py
